--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ keywords = ["winapi", "windows", "win32error", "error", "ffi"]
 repository = "https://github.com/Rust-WinGUI/win32-error.git"
 homepage = "https://github.com/Rust-WinGUI/win32-error"
 description = "Error like wrapper for GetLastError for Windows"
+edition = "2018"
 
 [dependencies]
 winapi = "0.2"
