--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,4 @@ description = "Error like wrapper for GetLastError for Windows"
 edition = "2018"
 
 [dependencies]
-winapi = "0.2"
-kernel32-sys = "0.2.2"
+winapi = { version = "0.3.9", features = ["errhandlingapi", "winbase"] }
